ISS-11-17-45 Initial Fix  Main Elements Alignment

--- a/styles/tips-for-strensiq.css
+++ b/styles/tips-for-strensiq.css
@@ -212,9 +212,11 @@
 @media screen and (min-width: 992px) {
     .hpp-dtc-m-hero.internal-hero .content {
         justify-content: flex-end;
+        padding: 0 15px;
     }
 
     .hpp-dtc-m-hero.internal-hero.tips-for-using-strensiq-hero .content .pre-title {
+        left: 0;
         margin-top: 4rem;
     }
 
